# whatsnew

./: Cargo.toml  LICENSE  committed.toml  rustfmt.toml
.github/workflows/: ci.yml
whatsnew-cli/: Cargo.toml
whatsnew-cli/src/: commands.rs  lib.rs  main.rs  output.rs
whatsnew-cli/src/commands/: commits.rs
whatsnew-core/: Cargo.toml
whatsnew-core/src/: gitprovider.rs  lib.rs  repos.rs  userdata.rs
