[package]
name = "whatsnew-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
indexmap.workspace = true
jiff.workspace = true
serde.workspace = true
serde_json.workspace = true
octocrab = "0.43.0"

[dev-dependencies]
tempfile = "3.19.0"
